# USB-Device-Monitor

./: CMakeLists.txt  ReadMe.md  devices.cfg  main.cpp
include/: exampleObserver.h  monitor.h  observer.h  subject.h
src/: exampleObserver.cpp  monitor.cpp
